# detection-readiness

./: README.md  pyproject.toml
examples/: azure_profile.yaml  azure_signin_sample.jsonl  endpoint_profile.yaml  o365_profile.yaml
examples/sample_events/: azure_ad_signin.jsonl  sysmon_process.csv
families/: data_exfiltration.yaml  email_impersonation.yaml  impossible_travel.yaml  lateral_movement.yaml  password_spray.yaml  privilege_escalation.yaml  suspicious_process_execution.yaml
outputs/: password_spray_azure.json
src/detection_readiness/: __init__.py
src/detection_readiness/ai/: __init__.py  narrative.py
src/detection_readiness/cli/: __init__.py  main.py
src/detection_readiness/content_factory/: __init__.py  spl_generator.py
src/detection_readiness/dependencies/: __init__.py  parser.py  resolver.py
src/detection_readiness/discovery/: __init__.py  field_discovery.py
src/detection_readiness/engine/: __init__.py  assessor.py
src/detection_readiness/explain/: __init__.py  ai_narrator.py  explainer.py
src/detection_readiness/families/: __init__.py
src/detection_readiness/generators/: __init__.py  (+2 more)
tests/: test_ai_narrator.py  test_cli.py  test_datamodel_health.py  test_dependency_parser.py  test_dependency_resolver.py  test_discovery.py  test_engine.py  test_event_profile_generator.py  test_explanation.py  test_family_loading.py  test_knowledge_objects_scoring.py  test_new_families.py  test_profile_generator.py  test_profile_loading.py  test_scoring.py  test_spl_generator.py  test_splunk_client.py  test_splunk_rest_integration.py
(+16 files in other folders)
